objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lateral_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lateral Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <displayFormat>S-{0000}</displayFormat>
        <label>Roll Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <label>Semester</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Contact_Number__c</fullName>
        <label>Student Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Student_Email__c</fullName>
        <label>Student Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <label>Student</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>